<resources>
    <string name="db_name">productsDatabase</string>
    <string name="Calculate_Your_BMI">BMI Calculator</string>
    <string name="Food_Table">Food Table</string>
    <string name="Composed_Meals">Composed\nMeals</string>
    <string name="Composed_Daily_Meals">Composed\nDaily Meals</string>
    <string name="Compose_The_Meal">Compose The Meal</string>
    <string name="Goal_2500ml">Goal 2500ml</string>
    <string name="ADD_250ML_WATER">ADD 250 ml WATER</string>
    <string name="RESET_WATER">RESET</string>
    <string name="Height_in_cm">Height in cm</string>
    <string name="Weight_in_kg">Weight in kg</string>
    <string name="Your_Result">Your Result</string>
    <string name="CLASIFICATION_BMI">CLASIFICATION BMI</string>
    <string name="Significantly_underweight">" Emaciation:  "</string>
    <string name="Underweight">" Underweight:  "</string>
    <string name="Normal">" Correct Value:  "</string>
    <string name="Overweight">" Overweight:  "</string>
    <string name="Class_obesity_1">" Obesity 1 degree:  "</string>
    <string name="Class_obesity_2">" Obesity 2 degree:  "</string>
    <string name="Class_obesity_3">" Obesity 3 degree:  "</string>
    <string name="Calculate">Calculate</string>
    <string name="Starvation">" Starvation:  "</string>
    <string name="BMI_CALCULATOR">BMI CALCULATOR</string>
    <string name="Starvation2">Starvation</string>
    <string name="Significantly_underweight2">Emaciation</string>
    <string name="Underweight2">Underweight</string>
    <string name="Normal2">Correct Value</string>
    <string name="Overweight2">Overweight</string>
    <string name="Class_obesity_1_2">1 degree of obesity</string>
    <string name="Class_obesity_2_2">2 degree of obesity</string>
    <string name="Class_obesity_3_2">3 degree of obesity</string>
    <string name="Products_Table">Products Table</string>
    <string name="Vegetables">Vegetables</string>
    <string name="Fruits">Fruits</string>
    <string name="Grain_Products">Grain Products</string>
    <string name="Dairy">Dairy</string>
    <string name="Fish">Fish</string>
    <string name="Meat">Meat</string>
    <string name="Sweets">Sweets</string>
    <string name="Drinks">Drinks</string>
    <string name="Send_The_Macronutrients">Send macronutrients to composing the meal</string>
    <string name="Reset">Reset</string>
    <string name="Add_Meal">Add Meal</string>
    <string name="Remove_Product">Remove Food</string>
    <string name="Meal_Name">Meal Name</string>
    <string name="Open_Compose_The_Meal">Open Compose The Meal</string>
    <string name="No_data">No Food.\nFood will be here after add from Food Table</string>
    <string name="No_data_to_send">No data to send</string>
    <string name="zero_will_not_be_sent">0 will not be sent</string>
    <string name="Macronutrients_has_been_sent">Macronutrients has been sent</string>
    <string name="No_product_with_this_index">No product with this index</string>
    <string name="No_data_ComposedMeals">No Composed Meals.\nMeals will be here after add from \"Compose The Meal\"</string>
    <string name="app_name">BNO</string>
    <string name="No_data_CustomFood">No added food.\nAdded food will be here after add from Food Table\n+ ADD FOOD</string>
    <string name="Added_Food">Added Food</string>
    <string name="Add_Food">+ ADD FOOD</string>
    <string name="REMOVE_MEAL">Remove Meal</string>
    <string name="ADD_MEALS_TO_DAILY_MENU">Add Meals To Daily Menu</string>
    <string name="Click_on_table_for_more_information">Click the table to get information about meal ingredients</string>
    <string name="Select_the_meals_you_want_to_add_to_the_daily_menu">Select the meals you want to add to the daily menu</string>
    <string name="Please_add_macronutrients_for_100_gram">Please add macronutrients for 100 gram</string>
    <string name="Food_Name">Food Name</string>
    <string name="Calories">Calories</string>
    <string name="Carbohydrates">Carbohydrates</string>
    <string name="Sugar">Sugar</string>
    <string name="Fats">Fats</string>
    <string name="Saturated_Fats">Saturated Fats</string>
    <string name="Choose_an_image_to_upload">Choose an image to upload</string>
    <string name="Add">Add</string>
    <string name="Protein">Protein</string>
    <string name="No_all_information_provided">No all information provided</string>
    <string name="Food_added">Food added to Composed Meals</string>
    <string name="Healthy_Info">Health Info</string>
    <string name="Click_the_name_of_product_to_get_information_about_his_composition">Click the meal name to get information about its ingredients</string>
    <string name="Meal_Added">Meal Added</string>
    <string name="First_add_food">First add food</string>
    <string name="Daily_meal_name">Daily meal name</string>
    <string name="Name_was_not_provided">Name was not provided</string>
    <string name="Please_select_5_meals">Please select 5 meals</string>
    <string name="Added_to_daily_meals">Added to daily meals</string>
    <string name="REMOVE_DAILY_MEAL">REMOVE DAILY MEAL</string>
    <string name="No_data_Composed_Daily_Meals">No Composed Daily Meals.\nDaily Meals will be here after add from \"Composed Meals\"</string>
    <string name="Include">Include</string>
    <string name="No_index_provided">No index provided</string>
    <string-array name="TDEE">
        <item>Inactivity</item>
        <item>Low activity</item>
        <item>Average activity</item>
        <item>High activity</item>
        <item>Very high activity</item>
    </string-array>
    <string name="Gender">Gender</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Age">Age</string>
    <string name="Physical_activity">Physical\nactivity</string>
    <string name="Daily_calories_requirement">Daily calories requirement</string>
    <string name="Height">Height</string>
    <string name="Weight">Weight</string>
    <string name="Inactivity">Inactivity</string>
    <string name="Low_activity">Low activity</string>
    <string name="Average_activity">Average activity</string>
    <string name="High_activity">High activity</string>
    <string name="Very_high_activity">Very high activity</string>
    <string name="Metabolism_Calculator">TDEE Calculator</string>
    <string name="Healthy_Information">Here are healthy information about food. Click on the selected item.</string>
    <string name="Calories_1st">The caloric requirement for every person is different depending on many factors, such as weight, height and physical activity. The calorie converter is:</string>
    <string name="Calories_2nd">1g protein = 4kcal 1g carbohydrates = 4kcal 1g\u00A0fats\u00A0=\u00A09kcal</string>
    <string name="Calories_3rd">The average person needs about 2,000 kcal per day. This is how much is included in the package of food products.\nThe requirement consists of BMR (basal metabolic rate) multiplied by the value of physical activity. There are formulas to calculate BMR. The BNO uses the Mifflin-St Jeor formula.</string>
    <string name="Male_Calories">Male</string>
    <string name="Female_Calories">Female</string>
    <string name="TDEE_PATERN_Male">[9,99 * weight (kg)] + [6,25 * height (cm)]\n- [4,92 * age (years)] + 5</string>
    <string name="Activity_value">Activity value</string>
    <string name="Activity_degree">Activity degree</string>
    <string name="TDEE_PATERN_Female">[9,99 * weight (kg)] + [6,25 * height (cm)]\n- [4,92 * age (years)] - 161</string>
    <string name="inactivity_sitting_work">inactivity, sitting work</string>
    <string name="low_activity">low activity (sitting work\nand 1 - 2 trainings per week)</string>
    <string name="moderate_activity">moderate activity (sitting work\nand 3 - 4 trainings a week)</string>
    <string name="high_activity">high activity (physical work\nand 3 - 4 trainings a week)</string>
    <string name="very_high_activity">very high activity\n(professional athletes, people\ntraining every day)</string>
    <string name="Carbo_1st">Carbohydrates are made of simple and complex sugars. Complex sugars are more beneficial for the body as they provide energy for longer time than simple ones which are pure sugar. Complex ones may be found in e.g. pasta or flour.</string>
    <string name="Carbo_2nd">Carbohydrates are stored in small quantities (250-321g) and it lasts for for 12 hours with a demand of 2000kcal. When the amount of carbohydrates is too low the body starts to use protein and fats. The carbohydrates excess is converted into fats which lead to obesity.</string>
    <string name="Carbo_3rd">Daily caloric requirement should be covered in 50-60% by carbohydrates. They are necessary to be active, to maintain proper health, and physically fit for a long time.</string>
    <string name="Carbo_4th">Carbohydrates are a good source of energy, they should be supplied to the body in the morning after waking up. They should be included in breakfast, lunch and dinner. In the morning, the body needs a dose of energy to accelerate the metabolic rate that has slowed down during the night. In the evening, it is better to avoid carbohydrates because the body will not use energy and transform the excess into adipose tissue.</string>
    <string name="Carbo_5th">Avoid empty calories such as confectionery, sweets, sugary carbonated drinks, sweet non-carbonated beverages and highly processed food, as those products do not have any valuable nutrients.</string>
    <string name="Exit">Exit</string>
    <string name="Protein_1st">The body is using proteins constantly and do not store them for later. The excess proteins is simply excreted. You need to make sure you get the right amount of them every day.</string>
    <string name="Protein_2nd">One of the most important functions is building muscle mass and regenerating muscle cells.</string>
    <string name="Protein_3rd">The demand for protein depends on many factors including age, gender and physical activity.</string>
    <string name="Protein_4th">The daily requirement should be satisfied because if it is not it lowers the metabolism, immunity, well-being, condition of the skin, hair and nails. However, it should not be exceeded because it overloads the liver and kidneys, increases the risk of inflammation.</string>
    <string name="healthy_person">healthy people</string>
    <string name="pregnant_woman">pregnant women</string>
    <string name="breastfeeding_woman">breastfeeding women</string>
    <string name="babies">babies</string>
    <string name="children_up_to_15_years_of_age">children up to 15 years old</string>
    <string name="people_practicing_sports">people practicing sports</string>
    <string name="Protein_V1">1g / 1kg body weight</string>
    <string name="Protein_V2">1,5g / 1kg body weight</string>
    <string name="Protein_V3">1,3g / 1kg body weight</string>
    <string name="Protein_V4">1,52g / 1kg body weight</string>
    <string name="Protein_V5">1,5-2g / 1kg body weight</string>
    <string name="Fats_1st">Fats are the most caloric component of our diet. 1g = 9kcal which is over 2 times more than protein and carbohydrates. Not all fats are bad, there are some fats that need to be provided to the body.</string>
    <string name="Fats_2nd">There are two types of fats - saturated and unsaturated. The unsaturated are healthier. Animal fats contain a lot of calories, cholesterol, and saturated fats increase the cholesterol level in blood and accelerate the development of atherosclerosis.</string>
    <string name="Fats_3rd">Saturated fats should not provide more than 10% of calories per day. It is better to avoid fat-free inventions because we may deprive ourselves of valuable vitamins dissolved in fats: A, D, E, K.</string>
    <string name="fats_4th">A low level of dietary fats may contribute to:</string>
    <string name="inhibition_of_growth_and_development">inhibition of growth and development</string>
</resources>