<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComposeMealActivity">

    <EditText
        android:id="@+id/editTextDishName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Meal_Name" />

    <Button
        android:id="@+id/buttonAddDish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/editTextDishName"
        android:onClick="button_AddDish"
        android:text="@string/Add_Meal" />

    <Button
        android:id="@+id/buttonResetIngredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/editTextDishName"
        android:onClick="button_ClearProductTable"
        android:text="@string/Reset" />

    <GridLayout
        android:id="@+id/gridLayoutComposhingDishes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="15dp"
        android:background="@android:color/holo_purple"
        android:columnCount="3"
        android:rowCount="3">

        <TextView
            android:id="@+id/textViewComposhingDishesKcal"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:background="@drawable/cell_shape"
            android:gravity="center"
            android:padding="2dp"
            android:text="213 \ncalories" />

        <TextView
            android:id="@+id/textViewComposhingDishesGram"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@drawable/cell_shape"
            android:gravity="center"
            android:padding="2dp"
            android:text="213g \nweight" />

        <TextView
            android:id="@+id/textViewComposhingDishesCarbohydrates"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@drawable/cell_shape"
            android:gravity="center"
            android:padding="2dp"
            android:text="carbohydrates \n23g" />

        <TextView
            android:id="@+id/textViewComposhingDishesFats"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@drawable/cell_shape"
            android:gravity="center"
            android:padding="2dp"
            android:text="21g \nfats" />

        <TextView
            android:id="@+id/textViewComposhingDishesProtein"
            android:layout_rowSpan="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@drawable/cell_shape"
            android:gravity="center"
            android:padding="2dp"
            android:text="3g \nprotein" />

        <TextView
            android:id="@+id/textViewComposhingDishesSugar"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@drawable/cell_shape"
            android:gravity="center"
            android:padding="2dp"
            android:text="21g \nsugar" />

        <TextView
            android:id="@+id/textViewComposhingDishesSaturatedFats"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@drawable/cell_shape"
            android:gravity="center"
            android:padding="2dp"
            android:text="11g \nsaturatedFats" />
    </GridLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/composingDishesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutComposhingDishesActivity"
        android:background="@android:color/darker_gray"
        android:padding="4dp"
        android:scrollbars="vertical" />

    <LinearLayout
        android:id="@+id/linearLayoutComposhingDishesActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gridLayoutComposhingDishes"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText_removeItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:inputType="number"
            android:maxLength="4"
            android:text="1" />

        <Button
            android:id="@+id/button_removeItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Remove_Product" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewNoData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutComposhingDishesActivity"
        android:background="#FAFAFA"
        android:gravity="center"
        android:text="@string/No_data"
        android:textSize="30dp" />

</RelativeLayout>